fixed overflow issue on laptop content

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4133,6 +4133,7 @@ nav.controls .menu:hover ul {
   width: 100%;
   height: 100%;
   background-color: #081725;
+  overflow: hidden;
 }
 
 .section-craft .main-panel .craft-player .laptop .laptop-base {
